--- a/Public/index.html
+++ b/Public/index.html
@@ -447,6 +447,37 @@ setInterval(async()=>{
 			  "": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Thermodynamic/.html",
 			 "24. Bond Energy, Bond Enthalpies, Applications, and Resonance Energy": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Thermodynamic/24. Bond Energy, Bond Enthalpies, Applications, and Resonance Energy.html"		  
 		  },
+	   "Chapter 6 - CHEMICAL EQUILIBRIUM": {
+              "1. Reversible & Irreversible Reactions": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-CHEMICAL-EQULI/1. Reversible & Irreversible Reactions.html",
+			 "2. Equilibrium and its Dynamic Nature": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-CHEMICAL-EQULI/2. Equilibrium and its Dynamic Nature.html",
+			 "3. Law of Mass Action & Equilibrium Constant": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-CHEMICAL-EQULI/3. Law of Mass Action & Equilibrium Constant.html",
+			 "4. Types of Equilibria": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-CHEMICAL-EQULI/4. Types of Equilibria.html",
+			 "5. Le-Chatelier’s Principle and its Applications": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-CHEMICAL-EQULI/5. Le-Chatelier’s Principle and its Applications.html",
+			 "6. Relation between Vapour Density & Degree of Dissociation": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-CHEMICAL-EQULI/6. Relation between Vapour Density & Degree of Dissociation.html"		  
+		  },
+	  		  "Chapter 6 - Solution": {
+              "1. Solubility and Kinds of Solutions": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/1. Solubility and Kinds of Solutions.html",
+			 "2. Methods of Expressing Concentration of Solution(Percentage, wbyw %, wbyv %, vbyv %, vbyw %": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/2. Methods of Expressing Concentration of Solution(Percentage, wbyw %, wbyv %, vbyv %, vbyw %.html",
+			 "3. ppm, ppb, and strength": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/3. ppm, ppb, and strength.html",
+			 "4. Normality (N)": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/4. Normality (N).html",
+			 "5. Molarity (M)": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/5. Molarity (M).html",
+			 "6. Relation between Molarity and Normality": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/6. Relation between Molarity and Normality.html",
+			 "7. Molality (m)": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/7. Molality (m).html",
+			 "8. Relation between Molarity (M) and Molality (m)": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/8. Relation between Molarity (M) and Molality (m).html",
+			 "9. Formality (F)": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/9. Formality (F).html",
+			 "10. Mole Fraction (X)": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/10. Mole Fraction (X).html",
+			"11. Relation between molality (m) and mole fraction of the solute (Xₐ), Mass Fraction and Demal Unit (D)": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/11. Relation between molality (m) and mole fraction of the solute (Xₐ), Mass Fraction and Demal Unit (D).html",
+			 "12. Colligative Property- Lowering of Vapour Pressure": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/12. Colligative Property- Lowering of Vapour Pressure.html",
+			 "13. Ideal and Non-Ideal Solutions, including positive and negative deviations from Raoult’s law": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/13. Ideal and Non-Ideal Solutions, including positive and negative deviations from Raoult’s law.html",
+			 "14. Azeotropic mixtures": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/14. Azeotropic mixtures.html",
+			 "15. Osmosis and Osmotic Pressure": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/15. Osmosis and Osmotic Pressure.html",
+			 "16. Elevation in Boiling Point (Ebullioscopy)": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/16. Elevation in Boiling Point (Ebullioscopy).html",
+			 "17. Depression in Freezing Point (Cryoscopy)": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/17. Depression in Freezing Point (Cryoscopy).html",
+			 "18. Colligative properties of electrolytes": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/18. Colligative properties of electrolytes.html",
+			 "19. Abnormal Molecular Masses": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/19. Abnormal Molecular Masses.html",
+			 "20. Van’t Hoff’s Factor ( i )": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/20. Van’t Hoff’s Factor ( i ).html"	
+            
+			},
 	   "Chapter 5 - Electrochemistry": {
               "1. Electrolytes & Electrolysis": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML--Electrochemistry/1. Electrolytes & Electrolysis.html",
 			 "2. Faraday’s laws of electrolysis": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML--Electrochemistry/2. Faraday’s laws of electrolysis.html",
@@ -463,6 +494,18 @@ setInterval(async()=>{
 			 "13. Relationship between Potential, Gibbs Free Energy, and Equilibrium Constant": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML--Electrochemistry/13. Relationship between Potential, Gibbs Free Energy, and Equilibrium Constant.html",
 			 "14. Electrochemical Series": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML--Electrochemistry/14. Electrochemical Series.html",
 			 "15. Corrosion": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML--Electrochemistry/15. Corrosion.html"	
+            },
+	  "Chapter 4 - CHEMICAL KINETICS": {
+              "1. Chemical Kinetics questions (types of reactions- examples of very fast,moderate,very slow reactions)": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Chemical-Kinetics/1. Chemical Kinetics questions (types of reactions- examples of very fast,moderate,very slow reactions).html",
+			 "2. Rate of Reaction, focusing on concentration expressed in active mass": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Chemical-Kinetics/2. Rate of Reaction, focusing on concentration expressed in active mass.html",
+			 "3. factors affecting the rate of a reaction": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Chemical-Kinetics/3. factors affecting the rate of a reaction.html",
+			 "4. Law of Mass Action and Rate Constant": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Chemical-Kinetics/4. Law of Mass Action and Rate Constant.html",
+			 "5. Molecularity and Order of a reaction, Pseudo unimolecular reactions, Order vs Molecularity examples, Rate constant and parameters of different orders": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Chemical-Kinetics/5. Molecularity and Order of a reaction, Pseudo unimolecular reactions, Order vs Molecularity examples, Rate constant and parameters of different orders.html",
+			 "6. Methods for determination of order of a reaction -Integration method, Plots of half-lives vs concentrations, Graphical method, Vant Hoff differential method, Ostwald’s isolation method": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Chemical-Kinetics/6. Methods for determination of order of a reaction -Integration method, Plots of half-lives vs concentrations, Graphical method, Vant Hoff differential method, Ostwald’s isolation method.html",
+			 "7. Theories of Reaction Rate (Collision Theory & Transition State Theory)": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Chemical-Kinetics/7. Theories of Reaction Rate (Collision Theory & Transition State Theory).html",
+			 "8. Arrhenius Equation": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Chemical-Kinetics/8. Arrhenius Equation.html",
+			 "9. Mechanism of Chemical Reactions": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Chemical-Kinetics/9. Mechanism of Chemical Reactions.html",
+			 "10. Chemistry questions on Photochemical Reactions": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Chemical-Kinetics/10. Chemistry questions on Photochemical Reactions.html"	
             },
 	   "Chapter 4 - The d-and f Block Eleents": {
               "1. The d- and f-Block Elements - Introduction": "https://chemistry-g10ep.github.io/Board-E--d-f-block-Elements/1. The d- and f-Block Elements - Introduction.html",
