--- a/Public/index.html
+++ b/Public/index.html
@@ -455,6 +455,22 @@ setInterval(async()=>{
 			 "5. Le-Chatelier’s Principle and its Applications": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-CHEMICAL-EQULI/5. Le-Chatelier’s Principle and its Applications.html",
 			 "6. Relation between Vapour Density & Degree of Dissociation": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-CHEMICAL-EQULI/6. Relation between Vapour Density & Degree of Dissociation.html"		  
 		  },
+	   "Chapter 5 - IONIC EQULIBRIUM": {
+              "1. Electrical conductors": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-IONIC-EQULI/1. Electrical conductors.html",
+			 "2. Arrhenius Theory of Electrolytic Dissociation": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-IONIC-EQULI/2. Arrhenius Theory of Electrolytic Dissociation.html",
+			 "3. Ostwald’s Dilution Law": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-IONIC-EQULI/3. Ostwald’s Dilution Law.html",
+			 "4. Dissociation Constants of Acids & Bases": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-IONIC-EQULI/4. Dissociation Constants of Acids & Bases.html",
+			 "5. Common Ion Effect and Isohydric solution": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-IONIC-EQULI/5. Common Ion Effect and Isohydric solution.html",
+			 "6. Solubility Product (Ksp)": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-IONIC-EQULI/6. Solubility Product (Ksp).html",
+			 "7. Acid & Bases covering Arrhenius, Brønsted–Lowry, Lewis concepts": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-IONIC-EQULI/7. Acid & Bases covering Arrhenius, Brønsted–Lowry, Lewis concepts.html",
+			 "8. Relative Strength of Acids and Bases": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-IONIC-EQULI/8. Relative Strength of Acids and Bases.html",
+			 "9. Acid–Base Neutralisation & Salts": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-IONIC-EQULI/9. Acid–Base Neutralisation & Salts.html",
+			 "10. Ionic Product of Water": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-IONIC-EQULI/10. Ionic Product of Water.html",
+			 "11. Hydrogen ion concentration – pH scale": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-IONIC-EQULI/11. Hydrogen ion concentration – pH scale.html",
+			 "12. Buffer Solutions": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-IONIC-EQULI/12. Buffer Solutions.html",
+			 "13. Salt Hydrolysis": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-IONIC-EQULI/13. Salt Hydrolysis.html",
+			 "14. Indicators": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-IONIC-EQULI/14. Indicators.html"		  
+		  },
 	  		  "Chapter 6 - Solution": {
               "1. Solubility and Kinds of Solutions": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/1. Solubility and Kinds of Solutions.html",
 			 "2. Methods of Expressing Concentration of Solution(Percentage, wbyw %, wbyv %, vbyv %, vbyw %": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/2. Methods of Expressing Concentration of Solution(Percentage, wbyw %, wbyv %, vbyv %, vbyw %.html",
