--- a/Public/index.html
+++ b/Public/index.html
@@ -673,6 +673,25 @@ setInterval(async()=>{
 			 "5. Bond energy": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Thermodynamic/5. Bond energy.html",
 			 "6. Free energy and Work function": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-Thermodynamic/6. Free energy and Work function.html"	
             },
+	 			"Chapter 8 - Chemical equilibrium": {
+              "Coming Soon": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-EQUI/.html",
+			 "1. Reversible and Irreversible reaction": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-EQUI/1. Reversible and Irreversible reaction.html",
+			 "2. Equilibrium state": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-EQUI/2. Equilibrium state.html",
+			 "3. Law of mass action": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-EQUI/3. Law of mass action.html",
+			 "4. Law of equilibrium and Equilibrium constant-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-EQUI/4. Law of equilibrium and Equilibrium constant-1.html",
+			 "4. Law of equilibrium and Equilibrium constant-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-EQUI/4. Law of equilibrium and Equilibrium constant-2.html",
+			 "4. Law of equilibrium and Equilibrium constant-3": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-EQUI/4. Law of equilibrium and Equilibrium constant-3.html",
+			 "4. Law of equilibrium and Equilibrium constant-4": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-EQUI/4. Law of equilibrium and Equilibrium constant-3.html",
+			 "5. Kp & Kc Relationship and Characteristics of K-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-EQUI/5. Kp & Kc Relationship and Characteristics of K-1.html",
+			 "5. Kp & Kc Relationship and Characteristics of K-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-EQUI/5. Kp & Kc Relationship and Characteristics of K-2.html",
+			 "5. Kp & Kc Relationship and Characteristics of K-3": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-EQUI/5. Kp & Kc Relationship and Characteristics of K-3.html",
+			 "5. Kp & Kc Relationship and Characteristics of K-4": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-EQUI/5. Kp & Kc Relationship and Characteristics of K-4.html",
+			 "6. Activation energy, Standard free energy and Degree of dissociation and Vapour density": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-EQUI/6. Activation energy, Standard free energy and Degree of dissociation and Vapour density.html",
+			 "7. Le-Chaterlier principle and It’s application-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-EQUI/7. Le-Chaterlier principle and It’s application-1.html",
+			 "7. Le-Chaterlier principle and It’s application-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-EQUI/7. Le-Chaterlier principle and It’s application-2.html",
+			 "7. Le-Chaterlier principle and It’s application-3": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-EQUI/7. Le-Chaterlier principle and It’s application-3.html",
+			 "7. Le-Chaterlier principle and It’s application-4": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-EQUI/7. Le-Chaterlier principle and It’s application-4.html"	
+            },
 	 "Chapter 6 - Solution": {
               "1. Solubility and Kinds of Solutions": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/1. Solubility and Kinds of Solutions.html",
 			 "2. Methods of Expressing Concentration of Solution(Percentage, wbyw %, wbyv %, vbyv %, vbyw %": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/2. Methods of Expressing Concentration of Solution(Percentage, wbyw %, wbyv %, vbyv %, vbyw %.html",
