--- a/Public/index.html
+++ b/Public/index.html
@@ -692,6 +692,37 @@ setInterval(async()=>{
 			 "7. Le-Chaterlier principle and It’s application-3": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-EQUI/7. Le-Chaterlier principle and It’s application-3.html",
 			 "7. Le-Chaterlier principle and It’s application-4": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-CHEMICAL-EQUI/7. Le-Chaterlier principle and It’s application-4.html"	
             },
+
+	   "Chapter 2 - Ionic Equilibrium": {
+             "1. Electrical conductors, Arrhenius theory and  Ostwald's dilution law-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/1. Electrical conductors, Arrhenius theory and  Ostwald's dilution law-1.html",
+			"1. Electrical conductors, Arrhenius theory and  Ostwald's dilution law-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/1. Electrical conductors, Arrhenius theory and  Ostwald's dilution law-2.html",
+			"2. Acids and Bases-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/2. Acids and Bases-1.html",
+			"2. Acids and Bases-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/2. Acids and Bases-2.html",
+			"2. Acids and Bases-3": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/2. Acids and Bases-3.html",
+			"2. Acids and Bases-4": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/2. Acids and Bases-4.html",
+			"2. Acids and Bases-5": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/2. Acids and Bases-5.html",
+			"2. Acids and Bases-6": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/2. Acids and Bases-6.html",
+			"2. Acids and Bases-7": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/2. Acids and Bases-7.html",
+			"2. Acids and Bases-8": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/2. Acids and Bases-8.html",
+			"2. Acids and Bases-9": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/2. Acids and Bases-9.html",
+			"3. Common ion effect, Isohydric solutions, Solubility product, Ionic product of water and Salt hydrolysis-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/3. Common ion effect, Isohydric solutions, Solubility product, Ionic product of water and Salt hydrolysis-1.html",
+			"3. Common ion effect, Isohydric solutions, Solubility product, Ionic product of water and Salt hydrolysis-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/3. Common ion effect, Isohydric solutions, Solubility product, Ionic product of water and Salt hydrolysis-2.html",
+			"3. Common ion effect, Isohydric solutions, Solubility product, Ionic product of water and Salt hydrolysis-3": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/3. Common ion effect, Isohydric solutions, Solubility product, Ionic product of water and Salt hydrolysis-3.html",
+			"3. Common ion effect, Isohydric solutions, Solubility product, Ionic product of water and Salt hydrolysis-4": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/3. Common ion effect, Isohydric solutions, Solubility product, Ionic product of water and Salt hydrolysis-4.html",
+			"3. Common ion effect, Isohydric solutions, Solubility product, Ionic product of water and Salt hydrolysis-5": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/3. Common ion effect, Isohydric solutions, Solubility product, Ionic product of water and Salt hydrolysis-5.html",
+			"3. Common ion effect, Isohydric solutions, Solubility product, Ionic product of water and Salt hydrolysis-6": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/3. Common ion effect, Isohydric solutions, Solubility product, Ionic product of water and Salt hydrolysis-6.html",
+			"4. Hydrogen ion concentration- pH scale and Buffer solution-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/4. Hydrogen ion concentration- pH scale and Buffer solution-1.html",
+			"4. Hydrogen ion concentration- pH scale and Buffer solution-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/4. Hydrogen ion concentration- pH scale and Buffer solution-2.html",
+			"4. Hydrogen ion concentration- pH scale and Buffer solution-3": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/4. Hydrogen ion concentration- pH scale and Buffer solution-3.html",
+			"4. Hydrogen ion concentration- pH scale and Buffer solution-4": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/4. Hydrogen ion concentration- pH scale and Buffer solution-4.html",
+			"4. Hydrogen ion concentration- pH scale and Buffer solution-5": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/4. Hydrogen ion concentration- pH scale and Buffer solution-5.html",
+			"4. Hydrogen ion concentration- pH scale and Buffer solution-6": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/4. Hydrogen ion concentration- pH scale and Buffer solution-6.html",
+			"4. Hydrogen ion concentration- pH scale and Buffer solution-7": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/4. Hydrogen ion concentration- pH scale and Buffer solution-7.html",
+			"4. Hydrogen ion concentration- pH scale and Buffer solution-8": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/4. Hydrogen ion concentration- pH scale and Buffer solution-8.html",
+			 "4. Hydrogen ion concentration- pH scale and Buffer solution-9": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/4. Hydrogen ion concentration- pH scale and Buffer solution-9.html",
+			"4. Hydrogen ion concentration- pH scale and Buffer solution-10": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/4. Hydrogen ion concentration- pH scale and Buffer solution-10.html",
+			"4. Hydrogen ion concentration- pH scale and Buffer solution-11": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/4. Hydrogen ion concentration- pH scale and Buffer solution-11.html"
+			   },
 	 "Chapter 6 - Solution": {
               "1. Solubility and Kinds of Solutions": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/1. Solubility and Kinds of Solutions.html",
 			 "2. Methods of Expressing Concentration of Solution(Percentage, wbyw %, wbyv %, vbyv %, vbyw %": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/2. Methods of Expressing Concentration of Solution(Percentage, wbyw %, wbyv %, vbyv %, vbyw %.html",
