--- a/Public/index.html
+++ b/Public/index.html
@@ -557,6 +557,18 @@ setInterval(async()=>{
 			 "12. Preparation and Applications of Coordination Compounds": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Cor-COMPOUND/12. Preparation and Applications of Coordination Compounds.html",
 			 "13. Organometallic Compounds": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Cor-COMPOUND/13. Organometallic Compounds.html"		  
 		  },
+	 "Chapter 5 - Haloalkane & Aryl Halide-2026": {
+              "1. Classification of compounds containing sp³ C–X bond": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/1. Classification of compounds containing sp³ C–X bond.html",
+			 "2. Classification of compounds containing sp² C–X bond": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/2. Classification of compounds containing sp² C–X bond.html",
+			 "3. Haloalkanes & Haloarenes (Nomenclature)": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/3. Haloalkanes & Haloarenes (Nomenclature).html",
+			 "4. Haloalkanes & Haloarenes - Nature of C–X bond": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/4. Haloalkanes & Haloarenes - Nature of C–X bond.html",
+			 "5. From alkane to alkylhalide (i) By halogenation": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/5. From alkane to alkylhalide (i) By halogenation.html",
+			 "6. From alkene Hydrohalogenation to alkylhalide": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/6. From alkene Hydrohalogenation to alkylhalide.html",
+			 "7. From alcohols (i) By the action of halogen acidsGroove’s process": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/7. From alcohols (i) By the action of halogen acidsGroove’s process.html",
+			 "8. DARZENS’ PROCESS + HUNSDIECKER REACTION": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/8. DARZENS’ PROCESS + HUNSDIECKER REACTION.html",
+			 "9. Using PCl₅ and PCl₃ to alkylhalide (i) By halogenation": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/9. Using PCl₅ and PCl₃ to alkylhalide (i) By halogenation.html",
+			 "10. Finkelstein Reaction + Limitation + Swarts Reaction": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/10. Finkelstein Reaction + Limitation + Swarts Reaction.html"		  
+		  },
 		   "Chapter 7 - Coming Soon": {
               "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
 			 "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
