--- a/Public/index.html
+++ b/Public/index.html
@@ -735,6 +735,20 @@ setInterval(async()=>{
 			"4. Hydrogen ion concentration- pH scale and Buffer solution-10": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/4. Hydrogen ion concentration- pH scale and Buffer solution-10.html",
 			"4. Hydrogen ion concentration- pH scale and Buffer solution-11": "https://chemistry-g10ep.github.io/IIT-JEE--M--HTML-PDF-IONIC-EQUI/4. Hydrogen ion concentration- pH scale and Buffer solution-11.html"
 			   },
+	 		"Chapter 9 - Redox Reaction": {
+              "1. Oxidation, Reduction-1": "https://chemistry-g10ep.github.io/IIT-JEE-M-REXOX-REACTION/REDOX HTML/1. Oxidation, Reduction-1.html",
+			 "1. Oxidation, Reduction-2": "https://chemistry-g10ep.github.io/IIT-JEE-M-REXOX-REACTION/REDOX HTML/1. Oxidation, Reduction-2.html",
+			 "2. Oxidizing and Reducing agent-1": "https://chemistry-g10ep.github.io/IIT-JEE-M-REXOX-REACTION/REDOX HTML/2. Oxidizing and Reducing agent-1.html",
+			"2. Oxidizing and Reducing agent-2": "https://chemistry-g10ep.github.io/IIT-JEE-M-REXOX-REACTION/REDOX HTML/2. Oxidizing and Reducing agent-2.html",
+			"3. Oxidation number and Oxidation state-1": "https://chemistry-g10ep.github.io/IIT-JEE-M-REXOX-REACTION/REDOX HTML/3. Oxidation number and Oxidation state-1.html",
+			"3. Oxidation number and Oxidation state-2": "https://chemistry-g10ep.github.io/IIT-JEE-M-REXOX-REACTION/REDOX HTML/3. Oxidation number and Oxidation state-2.html",
+			"3. Oxidation number and Oxidation state-3": "https://chemistry-g10ep.github.io/IIT-JEE-M-REXOX-REACTION/REDOX HTML/3. Oxidation number and Oxidation state-3.html",
+			"3. Oxidation number and Oxidation state-4": "https://chemistry-g10ep.github.io/IIT-JEE-M-REXOX-REACTION/REDOX HTML/3. Oxidation number and Oxidation state-4.html",
+			"3. Oxidation number and Oxidation state-5": "https://chemistry-g10ep.github.io/IIT-JEE-M-REXOX-REACTION/REDOX HTML/3. Oxidation number and Oxidation state-5.html",
+			"3. Oxidation number and Oxidation state-6": "https://chemistry-g10ep.github.io/IIT-JEE-M-REXOX-REACTION/REDOX HTML/3. Oxidation number and Oxidation state-6.html",
+			"4. Redox reaction and Method for balancing (Redox reaction)-": "https://chemistry-g10ep.github.io/IIT-JEE-M-REXOX-REACTION/REDOX HTML/4. Redox reaction and Method for balancing (Redox reaction)-Q.html",
+			"5. Auto oxidation and Disproportionation": "https://chemistry-g10ep.github.io/IIT-JEE-M-REXOX-REACTION/REDOX HTML/5. Auto oxidation and Disproportionation.html"
+			},
 	 "Chapter 6 - Solution": {
               "1. Solubility and Kinds of Solutions": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/1. Solubility and Kinds of Solutions.html",
 			 "2. Methods of Expressing Concentration of Solution(Percentage, wbyw %, wbyv %, vbyv %, vbyw %": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/2. Methods of Expressing Concentration of Solution(Percentage, wbyw %, wbyv %, vbyv %, vbyw %.html",
