--- a/Public/index.html
+++ b/Public/index.html
@@ -557,7 +557,7 @@ setInterval(async()=>{
 			 "12. Preparation and Applications of Coordination Compounds": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Cor-COMPOUND/12. Preparation and Applications of Coordination Compounds.html",
 			 "13. Organometallic Compounds": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Cor-COMPOUND/13. Organometallic Compounds.html"		  
 		  },
-	 "Chapter 5 - Haloalkane & Aryl Halide-2026": {
+  	  		   "Chapter 5 - Haloalkane & Aryl Halide-2026": {
               "1. Classification of compounds containing sp³ C–X bond": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/1. Classification of compounds containing sp³ C–X bond.html",
 			 "2. Classification of compounds containing sp² C–X bond": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/2. Classification of compounds containing sp² C–X bond.html",
 			 "3. Haloalkanes & Haloarenes (Nomenclature)": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/3. Haloalkanes & Haloarenes (Nomenclature).html",
@@ -567,7 +567,14 @@ setInterval(async()=>{
 			 "7. From alcohols (i) By the action of halogen acidsGroove’s process": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/7. From alcohols (i) By the action of halogen acidsGroove’s process.html",
 			 "8. DARZENS’ PROCESS + HUNSDIECKER REACTION": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/8. DARZENS’ PROCESS + HUNSDIECKER REACTION.html",
 			 "9. Using PCl₅ and PCl₃ to alkylhalide (i) By halogenation": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/9. Using PCl₅ and PCl₃ to alkylhalide (i) By halogenation.html",
-			 "10. Finkelstein Reaction + Limitation + Swarts Reaction": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/10. Finkelstein Reaction + Limitation + Swarts Reaction.html"		  
+			 "10. Finkelstein Reaction + Limitation + Swarts Reaction": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/10. Finkelstein Reaction + Limitation + Swarts Reaction.html",
+			 "11. Physical and Chemical Properties": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/11. Physical and Chemical Properties.html",
+			 "12. Nucleophilic Substitution (SN) Reactions – Hydrolysis of Alkyl Halides": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/12. Nucleophilic Substitution (SN) Reactions – Hydrolysis of Alkyl Halides.html",
+			 "13. Reaction with alkoxides, dry silver oxide,NaSH,KSH, alcoholic KCN,AgCN": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/13. Reaction with alkoxides, dry silver oxide,NaSH,KSH, alcoholic KCN,AgCN.html",
+			 "14. Reaction with Alcoholic KCN vs AgCN and KNO₂ vs AgNO₂": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/14. Reaction with Alcoholic KCN vs AgCN and KNO₂ vs AgNO₂.html",
+			 "15. Reaction with Ammonia and Silver Salts of Fatty Acids": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/15. Reaction with Ammonia and Silver Salts of Fatty Acids.html",
+			 "16. Reaction with Sodium Acetylide and Sodium - Potassium Sulphide": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/16. Reaction with Sodium Acetylide and Sodium - Potassium Sulphide.html"
+			 
 		  },
 		   "Chapter 7 - Coming Soon": {
               "Coming Soon": "https://gten-educational-platform.github.io/Class-11-Physics/motion-1d/basic/uniform-acceleration.html",
