--- a/Public/index.html
+++ b/Public/index.html
@@ -557,7 +557,7 @@ setInterval(async()=>{
 			 "12. Preparation and Applications of Coordination Compounds": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Cor-COMPOUND/12. Preparation and Applications of Coordination Compounds.html",
 			 "13. Organometallic Compounds": "https://chemistry-g10ep.github.io/IIT-JEE-E-Q--HTML-Cor-COMPOUND/13. Organometallic Compounds.html"		  
 		  },
-  	  		   "Chapter 5 - Haloalkane & Aryl Halide-2026": {
+  	  	  	  		   "Chapter 5 - Haloalkane & Aryl Halide-2026": {
               "1. Classification of compounds containing sp³ C–X bond": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/1. Classification of compounds containing sp³ C–X bond.html",
 			 "2. Classification of compounds containing sp² C–X bond": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/2. Classification of compounds containing sp² C–X bond.html",
 			 "3. Haloalkanes & Haloarenes (Nomenclature)": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/3. Haloalkanes & Haloarenes (Nomenclature).html",
@@ -573,7 +573,11 @@ setInterval(async()=>{
 			 "13. Reaction with alkoxides, dry silver oxide,NaSH,KSH, alcoholic KCN,AgCN": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/13. Reaction with alkoxides, dry silver oxide,NaSH,KSH, alcoholic KCN,AgCN.html",
 			 "14. Reaction with Alcoholic KCN vs AgCN and KNO₂ vs AgNO₂": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/14. Reaction with Alcoholic KCN vs AgCN and KNO₂ vs AgNO₂.html",
 			 "15. Reaction with Ammonia and Silver Salts of Fatty Acids": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/15. Reaction with Ammonia and Silver Salts of Fatty Acids.html",
-			 "16. Reaction with Sodium Acetylide and Sodium - Potassium Sulphide": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/16. Reaction with Sodium Acetylide and Sodium - Potassium Sulphide.html"
+			 "16. Reaction with Sodium Acetylide and Sodium - Potassium Sulphide": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/16. Reaction with Sodium Acetylide and Sodium - Potassium Sulphide.html",
+			 "17. Elimination Reactions of Alkyl Halides (E1 & E2)": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/17. Elimination Reactions of Alkyl Halides (E1 & E2).html",
+			 "18.Miscellaneous Reactions of Alkyl Halides": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/18.Miscellaneous Reactions of Alkyl Halides.html",
+			 "19.Methods of Preparation of Dihalides": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/19.Methods of Preparation of Dihalides.html",
+			 "20. α–ω Dihalides": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/20. α–ω Dihalides.html"
 			 
 		  },
 		   "Chapter 7 - Coming Soon": {
