--- a/Public/index.html
+++ b/Public/index.html
@@ -760,6 +760,25 @@ setInterval(async()=>{
 			"4. Redox reaction and Method for balancing (Redox reaction)-": "https://chemistry-g10ep.github.io/IIT-JEE-M-REXOX-REACTION/REDOX HTML/4. Redox reaction and Method for balancing (Redox reaction)-Q.html",
 			"5. Auto oxidation and Disproportionation": "https://chemistry-g10ep.github.io/IIT-JEE-M-REXOX-REACTION/REDOX HTML/5. Auto oxidation and Disproportionation.html"
 			},
+	 	"Chapter 9 - GOC": {
+              "1. Bonding and hybridisation in organic compounds-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--GOC/HTML/1. Bonding and hybridisation in organic compounds-1.html",
+			 "1. Bonding and hybridisation in organic compounds-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--GOC/HTML/1. Bonding and hybridisation in organic compounds-2.html",
+			 "1. Bonding and hybridisation in organic compounds-3": "https://chemistry-g10ep.github.io/IIT-JEE--M--GOC/HTML/1. Bonding and hybridisation in organic compounds-3.html",
+			 "1. Bonding and hybridisation in organic compounds-4": "https://chemistry-g10ep.github.io/IIT-JEE--M--GOC/HTML/1. Bonding and hybridisation in organic compounds-4.html",
+			 "2. Dipole moment, resonance and reaction intermediates-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--GOC/HTML/2. Dipole moment, resonance and reaction intermediates-1.html",
+			 "2. Dipole moment, resonance and reaction intermediates-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--GOC/HTML/2. Dipole moment, resonance and reaction intermediates-2.html",
+			 "2. Dipole moment, resonance and reaction intermediates-3": "https://chemistry-g10ep.github.io/IIT-JEE--M--GOC/HTML/2. Dipole moment, resonance and reaction intermediates-3.html",
+			 "3. Organic reactions and their mechanism-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--GOC/HTML/3. Organic reactions and their mechanism-1.html",
+			 "3. Organic reactions and their mechanism-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--GOC/HTML/3. Organic reactions and their mechanism-2.html",
+			 "4. Structural and stereo isomerism-1": "https://chemistry-g10ep.github.io/IIT-JEE--M--GOC/HTML/4. Structural and stereo isomerism-1.html",
+			 "4. Structural and stereo isomerism-2": "https://chemistry-g10ep.github.io/IIT-JEE--M--GOC/HTML/4. Structural and stereo isomerism-2.html",
+			 "4. Structural and stereo isomerism-3": "https://chemistry-g10ep.github.io/IIT-JEE--M--GOC/HTML/4. Structural and stereo isomerism-3.html",
+			 "4. Structural and stereo isomerism-4": "https://chemistry-g10ep.github.io/IIT-JEE--M--GOC/HTML/4. Structural and stereo isomerism-4.html",
+			 "4. Structural and stereo isomerism-5": "https://chemistry-g10ep.github.io/IIT-JEE--M--GOC/HTML/4. Structural and stereo isomerism-5.html",
+			 "4. Structural and stereo isomerism-6": "https://chemistry-g10ep.github.io/IIT-JEE--M--GOC/HTML/4. Structural and stereo isomerism-6.html",
+			 "4. Structural and stereo isomerism-7": "https://chemistry-g10ep.github.io/IIT-JEE--M--GOC/HTML/4. Structural and stereo isomerism-7.html",
+			 "4. Structural and stereo isomerism-8": "https://chemistry-g10ep.github.io/IIT-JEE--M--GOC/HTML/4. Structural and stereo isomerism-8.html"	
+            },
 	 "Chapter 6 - Solution": {
               "1. Solubility and Kinds of Solutions": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/1. Solubility and Kinds of Solutions.html",
 			 "2. Methods of Expressing Concentration of Solution(Percentage, wbyw %, wbyv %, vbyv %, vbyw %": "https://chemistry-g10ep.github.io/IIT-JEE-E--HTML-Solution/2. Methods of Expressing Concentration of Solution(Percentage, wbyw %, wbyv %, vbyv %, vbyw %.html",
