--- a/Public/index.html
+++ b/Public/index.html
@@ -577,7 +577,9 @@ setInterval(async()=>{
 			 "17. Elimination Reactions of Alkyl Halides (E1 & E2)": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/17. Elimination Reactions of Alkyl Halides (E1 & E2).html",
 			 "18.Miscellaneous Reactions of Alkyl Halides": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/18.Miscellaneous Reactions of Alkyl Halides.html",
 			 "19.Methods of Preparation of Dihalides": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/19.Methods of Preparation of Dihalides.html",
-			 "20. α–ω Dihalides": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/20. α–ω Dihalides.html"
+			 "20. α–ω Dihalides": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/20. α–ω Dihalides.html",
+			 "21. Chemical Properties of Dihalides": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/21. Chemical Properties of Dihalides.html",
+			 "22. Tri-halides (Chloroform)": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/22. Tri-halides (Chloroform).html"
 			 
 		  },
 		   "Chapter 7 - Coming Soon": {
