--- a/Public/index.html
+++ b/Public/index.html
@@ -579,7 +579,8 @@ setInterval(async()=>{
 			 "19.Methods of Preparation of Dihalides": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/19.Methods of Preparation of Dihalides.html",
 			 "20. α–ω Dihalides": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/20. α–ω Dihalides.html",
 			 "21. Chemical Properties of Dihalides": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/21. Chemical Properties of Dihalides.html",
-			 "22. Tri-halides (Chloroform)": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/22. Tri-halides (Chloroform).html"
+			"22. Tri-halides (Chloroform)": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/22. Tri-halides (Chloroform).html",
+			 "23. Iodoform (CHI₃)": "https://chemistry-g10ep.github.io/IIT-JEE-E--Halo-Ar-and-R/23. iodoform (CHI₃).html"
 			 
 		  },
 		   "Chapter 7 - Coming Soon": {
